Fixed map spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -288,12 +288,11 @@ footer a {
 
 /* Map */
 #mapdiv {
-  height: 65%;
+  height: 80%;
+  min-height: 12.5rem;
   width: auto;
   text-align: center;
   margin: 1rem;
-  display: flex;
-  justify-content: center;
 }
 
 /*END OF AUTHOR'S CUSTOM STYLES*/
